* Improve notification handling / code clean up.

Version 1.14 Final (22/1/2013)
------------------------------

* Fix incorrect data type assignment ('string' should have been 'text') in module preferences.

Version 1.15 Final
------------------

* Improve efficiency of search function.

Version 1.16 Final
------------------
* Remove some paragraph tags from description field in template (these should be entered in the 
description itself).
* Fix bug in search function that was crashing profile views
* Added syndication toggle to include individual articles in RSS feeds (or not).
* Added default syndication preference.
* Add extended_text and creator to searchable fields

Version 1.16 Final
------------------
* Add preference to enable Facebook comments / set width of comment box.
* Added short doc on how to configure Facebook comments.
* Added selective cache clearance when an article is added/edited/deleted when module caching is on
* Globally renamed the lead_image field to image, for consistency with Sprockets functions and other modules.

Version 1.17
------------
* Recent news block can now be configured to display teasers with thumbnails (or the traditional 
simple list).

Version 1.18 (unreleased)
-------------------------
* Replace global $newsConfig with icms_getConfig('configname', 'news') in class files.
* Calculate document root, allows lead images to be displayed correctly if install is in a subdirectory.
* Removed calls to Sprockets methods getTagId() and getItemId() which are redundant and have been removed. 
* Add handling of 'untagged' articles and related compatibility patches for Sprockets 2.01.
* Improved efficiency of recent articles block (reduced query load via buffers).
* Fixed broken 'display image' controls governing story lead images.
* Fixed broken teaser image controls in recent article block.
* Reduce code in article.php by making use of new functions in Sprockets module getTagsForObjects()