@@ -72,3 +72,4 @@ Version 1.18 (unreleased)
 * Fixed broken 'display image' controls governing story lead images.
 * Fixed broken teaser image controls in recent article block.
 * Reduce code in article.php by making use of new functions in Sprockets module getTagsForObjects()
+* Add option to filter recent articles block by current tag, ie. dynamically.
